--- a/movie ranking.html
+++ b/movie ranking.html
@@ -36,7 +36,7 @@
             Based on George R.R. Martin's book series A Song of Ice and Fire, Game of Thrones (GoT) is set in the fictional continents of Westeros and Essos. The series follows multiple noble families fighting for the Iron Throne while an ancient supernatural threat, the White Walkers, slowly emerges in the North. <br/>
             The show is known for its <b>political intrigue, shocking deaths, intense battles, and unforgettable characters.</b>
         </p>
-    <h3><li>proson break</li></h3>
+    <h3><li>prison break</li></h3>
         <ul>
             <li><b>Original Run:</b>2005–2009 (Seasons 1–4), 2017 (Season 5)</li>
             <li><b>Genre:</b>Action, Thriller, Crime, Drama</li>
